feat: add filter by role, search by name to endpoint get all user